tests/baselines/reference/tsxElementResolution4.errors.txt
file.tsx(16,7): error TS2339: Property 'q' does not exist on type '{ m: string; }'.


==== file.tsx (1 errors) ====
    declare module JSX {
    	interface Element { }
    	interface IntrinsicElements {
    	    div: { n: string; };
    	    span: { m: string; };
    	}
    }
    
    // OK
    <div n='x' />;
    
    // OK
    <span m='ok' />;
    
    // Error
    <span q='' />;
          ~
!!! error TS2339: Property 'q' does not exist on type '{ m: string; }'.
    